fix: improve URL formatting with better exception